--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.8",
     "lucide-react": "^0.511.0",
     "portfolio": "file:",
     "react": "^19.1.0",
